--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "python.linting.enabled": false
+  "python.linting.enabled": false,
+  "python.pythonPath": "/Users/khalidali/.local/share/virtualenvs/django_env-zEVVsRlW/bin/python"
 }
